--- a/12 - Lista de Usúario Aprimorada/package.json
+++ b/12 - Lista de Usúario Aprimorada/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/**/*.{js,jsx}",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "eslintConfig": {
     "extends": [
